fix document and shard job
